--- a/src/app/pages/board/board-tile/board-tile.component.scss
+++ b/src/app/pages/board/board-tile/board-tile.component.scss
@@ -22,5 +22,5 @@ app-board-tile {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
   pointer-events: auto;
   user-select: none;
-  transform: translate(-50%, -50%);
+  // transform: translate(-50%, -50%);
 }
