--- a/src/app/pages/board/board.component.scss
+++ b/src/app/pages/board/board.component.scss
@@ -33,4 +33,13 @@ p{
   color: white;
 }
 
+.connector-lines {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  pointer-events: none;
+}
 
